# pypaperutils

./: LICENSE  README.md  pyproject.toml
demo/: demo_tudcolors.py
src/pypaperutils/: design.py  io.py  measure.py
