[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypaperutils"
description = "Useful functions for creating paper-ready figures in python"
readme = "README.md"
version = "1.1.0"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Konrad", email = "c.m.konrad@tudelft.nl"}
]
requires-python = ">3.9"
dependencies = [
	"numpy",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
